<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:id="@+id/intro_text"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_app_name"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designation"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_text"
        android:text="@string/bottom_text"
        android:textColor="@color/bottom_color"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="16dp"
        android:layout_above="@id/bottom_text"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_signin_background"
            android:text="@string/btn_signin"
            android:textColor="@color/bottom_color"
            android:id="@+id/sign_in"
            android:layout_marginRight="6dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_signup_background"
            android:text="@string/btn_signup"
            android:textColor="@color/btn_signup"
            android:id="@+id/sign_up"
            android:layout_marginLeft="6dp"
            />
    </LinearLayout>



</RelativeLayout>